Perkin-UAT/force-app/main/default/objects/Demo_Reservations__c/Demo_Reservations__c.object-meta.xml
<CustomObject>
    <label>Demo Reservations</label>
    <nameField>
        <label>Reservation Request</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Demo Reservations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>