Perkin-UAT/force-app/main/default/objects/Demo_Reservations__c/fields/Demo_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Demo_Inventory__c</fullName>
    <label>Demo Inventory</label>
    <referenceTo>Field_Inventory__c</referenceTo>
    <relationshipLabel>Reservations</relationshipLabel>
    <relationshipName>R00N30000001Dly3EAC</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>