Perkin-UAT/force-app/main/default/objects/Demo_Reservations__c/fields/Received_Back__c.field-meta.xml
<CustomField>
    <fullName>Received_Back__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rec&#39;d Back</label>
    <type>Checkbox</type>
</CustomField>