Perkin-UAT/force-app/main/default/objects/Demo_Reservations__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>R00N30000001Dm0sEAC</relationshipName>
    <type>Lookup</type>
</CustomField>